# ritu-reading

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  main.py  pyproject.toml
app/: auth.py  config.py  database.py  models.py  seed.py
app/routes/: attempts.py  auth_routes.py  pages.py  parent.py  stories.py
app/services/: daily_digest.py  email_service.py  image_generator.py  phonetics.py  progression.py  scoring.py  story_generator.py  stt.py  tts.py  word_alignment.py
app/static/css/: app.css
app/static/js/: reader.js
app/templates/: base.html  login.html
app/templates/child/: home.html  reader.html  score.html
app/templates/parent/: children.html  dashboard.html  settings.html
app/templates/partials/: attempt_rows.html  child_row.html  level_badge.html  story_card.html  story_detail.html  story_generating.html  word_cloud.html
